welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:53: error: Unmatched closing brace '}' ignored here
}
^